Fixed bug - logo is too small on phone - edit

--- a/assets/styles/layout_header.css
+++ b/assets/styles/layout_header.css
@@ -24,14 +24,7 @@
         }
 
         .logo{
-            width: 175px;
-        }
-            
-        /* The logo increases in size for larger devices  */   
-       @media (min-width: 459px){
-                .logo {
-                    width: 200px;
-                }
+            width: 200px;
         }
 
         @media (min-width: 639px){
